tests/ui/fail_derive_delegate_for_impl_without_trait.rs
#[thin_delegate::register]
struct Hoge(String);

#[thin_delegate::derive_delegate]
impl Hoge {}

fn main() {}
